@@ -1,8 +1,3 @@
-- use GetTempPath
-
-	http://msdn.microsoft.com/en-us/library/aa364992%28VS.85%29.aspx
-
-  instead of $TMPDIR on win
 
 - lcms2 needs testing
 
