@@ -2,6 +2,7 @@
 - im_vips2bufjpeg() writes to a linked list, so it will work for any size
   image and header
 - added im_vips2bufpng()
+- use GetTempPath() to pick a temp dir on Windows
 
 12/5/10 started 7.22.2
 - the conditional image of ifthenelse can be any format, a (!=0) is added if
